# kpopsocialvotetabulator

./: .gitignore  README.md  config.py  pyproject.toml  tabulatevotes.py
